Fix spacing when notice rendered but no schedule message

--- a/client/components/deposits-overview/style.scss
+++ b/client/components/deposits-overview/style.scss
@@ -13,12 +13,12 @@
 		}
 	}
 	.wcpay-inline-notice.components-notice {
-		margin: 0;
-		margin-bottom: 16px;
+		margin: 16px 0;
 	}
 
 	.components-card__body.wcpay-deposits-overview__schedule__container {
 		padding-top: 24px;
+		padding-bottom: 0;
 	}
 
 	.components-card__footer.wcpay-deposits-overview__footer {
